Added links to VideoChat

--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
 									<!-- Nav -->
 										<nav id="nav">
 											<ul>
-												<li class="current_page_item"><a href="index.html">Home</a></li>
+												<li class="#"><a href="index.html">Home</a></li>
 												<li>
 													<span>Find a Provider</span>
 													<ul>
@@ -64,9 +64,9 @@
 														<li><a href="#">Nisl tempus</a></li>
 													</ul>
 												</li>
-												<li><a href="right-sidebar.html">Services</a></li>
-												<li><a href="left-sidebar.html">About Our Hospital</a></li>
-												<li><a href="no-sidebar.html">Contact Us</a></li>
+												<li><a href="sessionview">Telemedical Services</a></li>
+												<li><a href="sessionview">About Our Hospital</a></li>
+												<li><a href="sessionview">Schedule an Appointment</a></li>
 											</ul>
 										</nav>
 									<!-- /Nav -->
